Working Register form (correctly adding elements to the database).