@@ -1,49 +1,48 @@
 package com.pgl.energenius;
 
 import com.pgl.energenius.Services.ClientLoginService;
-
 import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.Ordered;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityConfiguration;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
+
 
 @Configuration
 @EnableWebSecurity
 public class WebSecurityConfig {
+    
 
     @Autowired
     private ClientLoginService clientLoginService;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        return http
+        return http.csrf().disable()
         .cors(Customizer.withDefaults()) // ajout de cette ligne selon la documentation pour permettre les requêtes cors
                 .authorizeHttpRequests((requests) -> requests
                         .requestMatchers("/", "/api/client/register", "/api/client", "/api/client/testing").permitAll() // ajout de la page testing
-                        .anyRequest().authenticated() // retirer .authenticated() et ajouter .hasRole("CLIENT")
-                )
-                .formLogin((form) -> form
+                        .anyRequest()//.authenticated() // retirer .authenticated() et ajouter .hasRole("CLIENT")
+                )/* .formLogin((form) -> form
                         .loginPage("/login")
                         .usernameParameter("email")
                         .permitAll()
                         .defaultSuccessUrl("/hello", true)
-                )
+                ) */
+                
                 .logout((logout) -> logout.permitAll()).build();
     }
 
@@ -55,6 +54,7 @@ public class WebSecurityConfig {
         return authProvider;
     }
 
+
     @Bean
     public static PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
@@ -64,8 +64,8 @@ public class WebSecurityConfig {
     CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "OPTIONS"));
-        //configuration.setAllowedHeaders(List.of(""));
+        configuration.setAllowedMethods(Arrays.asList("GET", "OPTIONS", "POST"));
+        configuration.setAllowedHeaders(List.of("Content-Type", "Access-Control-Allow-Origin"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
